# commandline-videostore-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  movie_utilities.cpp  movie_utilities.h  run.cpp  run.h  steps.md
.github/workflows/: github_actions_build.yml  on-push-do-doco.yml
CMake/: UseCompilerCache.cmake
dependencies/: CMakeLists.txt
slides/: README.md
test/: CMakeLists.txt  singleTest.cpp
test2/: CMakeLists.txt  integration_tests.cpp  main.cpp
